refactor part-1