@@ -10,7 +10,7 @@ import TabItem from '@theme/TabItem';
 
 To run this tutorial you just need two things:
 
-- [Docker](https://www.docker.com/get-started), including docker-compose. If you use Windows, you might want to use [podman as an alternative to docker](troubleshooting/docker-on-windows.md).
+- [Podman](https://podman.io/get-started), a free Docker alternative on Linux. On Windows you might use it through WSL2, see also [podman as an alternative to docker](troubleshooting/docker-on-windows.md).
 - The [source code of the example](https://github.com/smart-data-lake/getting-started).
 
 ## Build Spark docker image
@@ -19,95 +19,38 @@ To run this tutorial you just need two things:
 - Open up a terminal and change to the folder with the source, you should see a file called Dockerfile. 
 - Then run (note: this might take some time, but it's only needed once):
 
-<Tabs groupId = "docker-podman-switch"
-defaultValue="docker"
-values={[
-{label: 'Docker', value: 'docker'},
-{label: 'Podman', value: 'podman'},
-]}>
-<TabItem value="docker">
-
-```jsx
-docker build -t sdl-spark .
+```
+./buildSpark.sh
 ```
 
-</TabItem>
-<TabItem value="podman">
-
-```jsx
-podman build -v ${PWD}/.mvnrepo:/mnt/.mvnrepo -t sdl-spark .
-```
-
-</TabItem>
-</Tabs>
-
-
+:::note
+This creates a docker image including Spark, Python and SDLB libraries according to the SDLB version configured in pom.xml as parent.version. 
+:::
 
 ## Compile Scala Classes
 
-Utilizing a Maven container, the getting-started project with the required SDL Scala sources and all required libraries are compiled and packed using the following command.  
+Utilizing a Maven container, the getting-started project with the required SDLB Scala sources and all required libraries are compiled and packed using the following command:  
 
-<Tabs groupId = "docker-podman-switch"
-defaultValue="docker"
-values={[
-{label: 'Docker', value: 'docker'},
-{label: 'Podman', value: 'podman'},
-]}>
-<TabItem value="docker">
-
-```jsx
-mkdir .mvnrepo
-docker run -v ${PWD}:/mnt/project -v ${PWD}/.mvnrepo:/mnt/.mvnrepo maven:3.6.0-jdk-11-slim -- mvn -f /mnt/project/pom.xml "-Dmaven.repo.local=/mnt/.mvnrepo" package
 ```
-
-</TabItem>
-<TabItem value="podman">
-
-```jsx
-mkdir .mvnrepo
-podman run -v ${PWD}:/mnt/project -v ${PWD}/.mvnrepo:/mnt/.mvnrepo maven:3.6.0-jdk-11-slim -- mvn -f /mnt/project/pom.xml "-Dmaven.repo.local=/mnt/.mvnrepo" package
+./buildJob.sh
 ```
-
-</TabItem>
-</Tabs>
 
 :::note
 This might take some time, but it's only needed at the beginning or if Scala code has changed.
 :::
 
-## Run SDL with Spark docker image
-
+## Run SDLB with Spark docker image
 
 Now let's see Smart Data Lake in action!
 
-<Tabs groupId = "docker-podman-switch"
-defaultValue="docker"
-values={[
-{label: 'Docker', value: 'docker'},
-{label: 'Podman', value: 'podman'},
-]}>
-<TabItem value="docker">
-
-```jsx
-mkdir data
-docker run --rm -v ${PWD}/data:/mnt/data -v ${PWD}/target:/mnt/lib -v ${PWD}/config:/mnt/config sdl-spark:latest --config /mnt/config --feed-sel download
+```
+pushd config && cp departures.conf.part-1-solution departures.conf && cp airports.conf.part-1-solution airports.conf && cp btl.conf.part-1-solution btl.conf && popd
+./startJob.sh --config /mnt/config,/mnt/envConfig/lab.conf --feed-sel download
 ```
 
-</TabItem>
-<TabItem value="podman">
+This executes a simple data pipeline that downloads two files from two different websites into the *data* folder.
 
-```jsx
-mkdir data
-podman run --rm -v ${PWD}/data:/mnt/data -v ${PWD}/target:/mnt/lib -v ${PWD}/config:/mnt/config sdl-spark:latest --config /mnt/config --feed-sel download
-```
-
-</TabItem>
-</Tabs>
-
-This creates a folder in the current directory named *data* and then 
-executes a simple data pipeline that downloads two files from two different websites into that directory.
-
-When the execution is complete, you should see the two files in the *data* folder.
+When the execution is complete, you should see the two new directories in the *data* folder.
 Wonder what happened ? You will create the data pipeline that does just this in the first steps of this guide.
 
 If you wish, you can start with [part 1](get-input-data) right away.
@@ -123,10 +66,10 @@ Windows Users need to follow the steps below to have a working Hadoop Installati
 3. Configure the *HADOOP_HOME* environment variable to point to the folder &lt prefix &gt\hadoop-&lt version &gt\
 4. Add the *%HADOOP_HOME%\bin* to the *PATH* environment variable
 
-### Run SDL in IntelliJ
+### Run SDLB in IntelliJ
 We will focus on the community version of Intellij. Please [download](https://www.jetbrains.com/idea/) the version that suits your operating system.
 This needs an Intellij and Java SDK installation. Please make sure you have:
-- Java 8 SDK or Java 11 SDK
+- Java Java 17 SDK or Java 11 JDK
 - Scala Version 2.12. You need to install the Scala-Plugin with this exact version and DO NOT UPGRADE to Scala 3. For the complete list of versions at play in SDLB, [you can consult the Reference](../reference/build).
 
 1. Load the project as a maven project: Right-click on pom.xml file -> add as Maven Project
@@ -135,5 +78,6 @@ This needs an Intellij and Java SDK installation. Please make sure you have:
     - Main class: `io.smartdatalake.app.LocalSmartDataLakeBuilder`
     - Program arguments: `--feed-sel <regex-feedname-selector> --config $ProjectFileDir$/config`
     - Working directory: `/path/to/sdl-examples/target` or just `target`
+    - VM Options: `--add-opens=java.base/sun.nio.ch=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.lang.invoke=ALL-UNNAMED --add-opens=java.base/java.lang.reflect=ALL-UNNAMED --add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.net=ALL-UNNAMED --add-opens=java.base/java.nio=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-opens=java.base/java.util.concurrent=ALL-UNNAMED --add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED --add-opens=java.base/jdk.internal.ref=ALL-UNNAMED --add-opens=java.base/sun.nio.cs=ALL-UNNAMED --add-opens=java.base/sun.security.action=ALL-UNNAMED --add-opens=java.base/sun.util.calendar=ALL-UNNAMED`
 
 **Congratulations!** You're now all setup! Head over to the next step to analyse these files...
